--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
-    "firebase": "^8.2.9",
+    "firebase": "^8.3.0",
     "gh-pages": "^3.1.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2"
+    "react-scripts": "4.0.2",
+    "ui": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
